[tool.poetry]
name = "SchwimbleGromp"
version = "0.1.0"
description = "An economy-based discord.py bot. Now deprecated."
authors = ["tomgxz <tomgxz.dev@gmail.com>"]
license = "GPL-3.0-or-later"
repository = https://github.com/Tomgxz/SchwimbleGromp"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.2.2"
humanize = "^4.3.0"
python-dotenv = "^0.20.0"
pickle-mixin = "^1.0.2"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
